[gd_scene load_steps=4 format=3 uid="uid://0brul8m0uan3"]

[ext_resource type="PackedScene" uid="uid://cdh2oitm7ijer" path="res://Card.tscn" id="1_3vl8j"]
[ext_resource type="Script" path="res://VideoPoker.gd" id="1_lnqfx"]
[ext_resource type="FontFile" uid="uid://c8u3s3qoglhts" path="res://dpcomic.ttf" id="6_8n0xt"]

[node name="VideoPoker" type="Node2D"]
script = ExtResource("1_lnqfx")

[node name="Card1" parent="." instance=ExtResource("1_3vl8j")]

[node name="Card2" parent="." instance=ExtResource("1_3vl8j")]
position = Vector2(250, 420)

[node name="Card3" parent="." instance=ExtResource("1_3vl8j")]
position = Vector2(400, 420)

[node name="Card4" parent="." instance=ExtResource("1_3vl8j")]
position = Vector2(550, 420)

[node name="Card5" parent="." instance=ExtResource("1_3vl8j")]
position = Vector2(700, 420)

[node name="PayIcons" type="Node2D" parent="."]
position = Vector2(100, 25)

[node name="1" type="Label" parent="PayIcons"]
offset_right = 500.0
offset_bottom = 100.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "ROYAL FLUSH"

[node name="2" type="Label" parent="PayIcons"]
offset_top = 30.0
offset_right = 500.0
offset_bottom = 130.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "STRAIGHT FLUSH"

[node name="3" type="Label" parent="PayIcons"]
offset_top = 60.0
offset_right = 500.0
offset_bottom = 160.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "FOUR OF A KIND"

[node name="4" type="Label" parent="PayIcons"]
offset_top = 90.0
offset_right = 500.0
offset_bottom = 190.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "FULL HOUSE"

[node name="5" type="Label" parent="PayIcons"]
offset_top = 120.0
offset_right = 500.0
offset_bottom = 220.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "FLUSH"

[node name="6" type="Label" parent="PayIcons"]
offset_top = 150.0
offset_right = 500.0
offset_bottom = 250.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "STRAIGHT"

[node name="7" type="Label" parent="PayIcons"]
offset_top = 180.0
offset_right = 500.0
offset_bottom = 280.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "THREE OF A KIND"

[node name="8" type="Label" parent="PayIcons"]
offset_top = 210.0
offset_right = 500.0
offset_bottom = 310.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "TWO PAIR"

[node name="9" type="Label" parent="PayIcons"]
offset_top = 240.0
offset_right = 500.0
offset_bottom = 340.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "JACKS OR BETTER"

[node name="PayValues" type="Node2D" parent="."]
position = Vector2(375, 25)

[node name="1" type="Label" parent="PayValues"]
offset_right = 500.0
offset_bottom = 100.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "250"

[node name="2" type="Label" parent="PayValues"]
offset_top = 30.0
offset_right = 500.0
offset_bottom = 130.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "50"

[node name="3" type="Label" parent="PayValues"]
offset_top = 60.0
offset_right = 500.0
offset_bottom = 160.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "25"

[node name="4" type="Label" parent="PayValues"]
offset_top = 90.0
offset_right = 500.0
offset_bottom = 190.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "9"

[node name="5" type="Label" parent="PayValues"]
offset_top = 120.0
offset_right = 500.0
offset_bottom = 220.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "6"

[node name="6" type="Label" parent="PayValues"]
offset_top = 150.0
offset_right = 500.0
offset_bottom = 250.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "4"

[node name="7" type="Label" parent="PayValues"]
offset_top = 180.0
offset_right = 500.0
offset_bottom = 280.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "3"

[node name="8" type="Label" parent="PayValues"]
offset_top = 210.0
offset_right = 500.0
offset_bottom = 310.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "2"

[node name="9" type="Label" parent="PayValues"]
offset_top = 240.0
offset_right = 500.0
offset_bottom = 340.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "1"

[node name="Misc" type="Node2D" parent="."]
position = Vector2(574, 25)

[node name="Credit" type="Label" parent="Misc"]
offset_right = 200.0
offset_bottom = 100.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "CREDIT
100"
horizontal_alignment = 1

[node name="Instr" type="Label" parent="Misc"]
offset_left = -278.0
offset_top = 530.0
offset_right = -78.0
offset_bottom = 630.0
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "SPACE DEAL"
horizontal_alignment = 1

[node name="Controls" type="Node2D" parent="."]
position = Vector2(25, 480)

[node name="1" type="Label" parent="Controls"]
offset_left = 25.0
offset_right = 125.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "Q"
horizontal_alignment = 1
vertical_alignment = 1

[node name="2" type="Label" parent="Controls"]
offset_left = 175.0
offset_right = 275.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "W"
horizontal_alignment = 1
vertical_alignment = 1

[node name="3" type="Label" parent="Controls"]
offset_left = 325.0
offset_right = 425.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="4" type="Label" parent="Controls"]
offset_left = 475.0
offset_right = 575.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "R"
horizontal_alignment = 1
vertical_alignment = 1

[node name="5" type="Label" parent="Controls"]
offset_left = 625.0
offset_right = 725.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "T"
horizontal_alignment = 1
vertical_alignment = 1

[node name="1Hold" type="Label" parent="Controls"]
visible = false
offset_left = 25.0
offset_right = 125.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "HOLD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="2Hold" type="Label" parent="Controls"]
visible = false
offset_left = 175.0
offset_right = 275.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "HOLD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="3Hold" type="Label" parent="Controls"]
visible = false
offset_left = 325.0
offset_right = 425.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "HOLD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="4Hold" type="Label" parent="Controls"]
visible = false
offset_left = 475.0
offset_right = 575.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "HOLD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="5Hold" type="Label" parent="Controls"]
visible = false
offset_left = 625.0
offset_right = 725.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_8n0xt")
theme_override_font_sizes/font_size = 32
text = "HOLD"
horizontal_alignment = 1
vertical_alignment = 1
